Revert "Added Relauncher Entry Point"
This reverts commit a3cc5ef680b6f12d1fa1fcedb1b5e6598c77cdf1.